docs/style.css
* {
    font-family: 'Inter', sans-serif;
}

a {
    text-align: center;
    text-decoration: none;
    line-height: 1;
    color: #333;
    font-weight: 700;
    position: relative;
    padding: 12px;
    border-radius: 10px;
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);    border: 1px solid #eee;
    display: inline-flex;
    align-items: center;
    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
}

a:hover {
    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
}

a.selected {
    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
}

body {
    margin: 0;
    background-color: #FBFBFB;
}

body > div {
    display: flex;
    flex-direction: column;
    height: calc(var(--vh) * 100);
    width: 100vw;
    overflow: auto;
}

div#movies {
    height: 100%;
    display: flex;
    flex-direction: column;
    overflow: auto;
    padding: 15px;
}

div#day-links {
    display: flex;
    max-width: 100vw;
    padding: 15px;
    border-top: 1px solid #eee;
    border-bottom: 1px solid #eee;
    overflow: auto;
}

div#day-links hr {
    margin: 0 8px 0 20px;
    border: none;
    border-left: 1px solid #eee;
}

div#day-links a {
    margin-left: 12px;
}

div#day-links a:first-of-type {
    margin-left: 0;
}

.movie {
    display: flex;
    flex-wrap: wrap;
    margin-bottom: 30px;
    border: 1px solid #ccc;
    border-radius: 12px;
    padding: 18px;
    color: #222;
    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
}

.movie > div {
    width: 50%;
}

.movie > div:first-of-type {
    display: flex;
    max-width: 400px;
    border-right: 1px solid #eee;
}

.showtimes {
    padding: 0 0 0 12px;
}

.format > div:first-of-type {
    font-weight: 700;
    font-size: 17px;
    margin-bottom: 8px;
}

.format:not(:last-of-type) {
    margin-bottom: 18px;
}

.format a:not(:last-of-type) {
    margin-right: 12px;
}

.movie-info > div:first-of-type {
    margin: 5px 0;
}

.movie h1 {
    font-size: 22px;
    margin: 0 0 5px;
    letter-spacing: -0.01em;
}

.movie > div:first-of-type img+div {
    padding: 12px;
}

.movie > div:first-of-type img+div a {
    margin-right: 12px;
}

.movie > div:first-of-type img+div a:last-of-type {
    margin-right: 0;
}

.movie img {
    width: 50%;
    flex-shrink: 0;
    max-width: 220px;
}

@media (max-width: 1250px) {
    .movie {
        padding: 12px;
    }

    .movie > div {
        width: 100%;
    }

    .movie > div:first-of-type {
        border-right: none;
    }

    .showtimes {
        padding: 0;
        margin-top: 18px;
    }

    .format:not(:last-of-type) {
        margin-bottom: 18px;
    }
}

